0.9 to current

	Added "inode" sorting key, which sorts entries by inode number.  Thanks to
	eco0414.

	Added retry/ignore/abort prompt for file copying and directory/file/symlink
	creation when 'syscalls' is on.  Thanks to einhander.

	Added AuxWin highlight group for highlighting auxiliary parts of windows.

	Changed :filter command to accept pattern (//, ////, {} or {{}}).  Thanks
	to rbong.

	Improved parsing of optional numbers in vifminfo.  Thanks to Aris
	Fergadis (a.k.a. afergadis).

	Indicate preview created with %q with "Command: cmd".

	Better detection of write errors on file copying.  The error was reported,
	but it wasn't treated as a hard error specific case related to caching.

	Make :siblnext and :siblprev commands respect dot and name filters.

	Disable spell checking of vifm files in Vim except for comments.

	Fixed positioning cursor in directory :history when inside custom view.
	Thanks to filterfalse.

	Fixed compilation of modes/view.c when build is configured with
	`--disable-extended-keys`.  Thanks to Bearcat M. Şándor (a.k.a.
	bearcatsandor).

0.9-beta to 0.9

	Escape $ and ` in %" macros on *nix systems.  Thanks to filterfalse.

	Don't use :filextype in sample vifmrc for OS X, we can't tell whether
	graphical system is running.  Thanks to piotryordanov.

	Do not add extra slash to path on picking files in the root.  Thanks to
	filterfalse.

	Properly escape newline when passing things into shell.  Thanks to
	filterfalse.

	View current directory on ".." for quickview/view mode only if no viewer
	matches such entry.

	Expand macros in :[un]select !{command}.  Thanks to Michael Corvin.

	Update the other view after file deletion (that file might be visible
	there too).

	Execute startup commands in directory of current pane.

	Fixed ruler being updated when it shouldn't even be visible.  Thanks to
	filterfalse.

	Fixed incorrect existence check for files that end with forward slash on
	*nix.  Thanks to filterfalse.
